@@ -1,7 +1,6 @@
 package edu.hm.hafner.analysis;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Resolves module names by reading and mapping module definitions (build.xml, pom.xml, or Manifest.mf files).
@@ -9,18 +8,27 @@ import java.util.stream.Collectors;
  * @author Ullrich Hafner
  */
 public class ModuleResolver {
+    private final ModuleDetectorRunner runner;
+
     /**
-     * Resolves absolute paths of the affected files of the specified set of issues.
+     * Creates a new instance of {@link ModuleResolver}.
+     *
+     * @param runner the module runner to use
+     */
+    public ModuleResolver(final ModuleDetectorRunner runner) {
+        this.runner = runner;
+    }
+
+    /**
+     * Resolves the absolute paths of all affected files referenced by the specified report.
      *
      * @param report
-     *         the issues to resolve the paths
-     * @param detector
-     *         the module detector to use
+     *         the issues to resolve the paths for
      */
-    public void run(final Report report, final ModuleDetector detector) {
+    public void run(final Report report) {
         List<Issue> issuesWithoutModule = report.stream()
                 .filter(issue -> !issue.hasModuleName())
-                .collect(Collectors.toList());
+                .toList();
 
         if (issuesWithoutModule.isEmpty()) {
             report.logInfo("-> all issues already have a valid module name");
@@ -28,7 +36,7 @@ public class ModuleResolver {
             return;
         }
 
-        issuesWithoutModule.forEach(issue -> issue.setModuleName(detector.guessModuleName(issue.getAbsolutePath())));
+        issuesWithoutModule.forEach(issue -> issue.setModuleName(runner.guessModuleName(issue.getAbsolutePath())));
         report.logInfo("-> resolved module names for %d issues", issuesWithoutModule.size());
     }
 }
